--- a/web2py/applications/pythoggle/views/default/find_new_opponents.html
+++ b/web2py/applications/pythoggle/views/default/find_new_opponents.html
@@ -24,7 +24,7 @@
         <td>Doe</td>
         <td>john@example.com</td>
           <td>
-              <a class="btn btn-primary" href="{{=URL('home')}}">start match</a>
+              <a class="btn btn-primary" href="{{=URL('setup_match', args=player.id)}}">start match</a>
           </td>
       </tr>
       {{ pass }}
